# dokabun

./: README.md  _.env  pyproject.toml
document/: dok.design.md  how_to_use-LLMAPI.md  idea.txt  step.md  step.phase5-7.md
dokabun/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  target.py
dokabun/core/: __init__.py  runner.py  summary.py
dokabun/core/runner/: __init__.py  cells.py  columns.py  embedding.py  generation_costs.py  models.py  orchestrator.py  row_processor.py  work_items.py
dokabun/io/: __init__.py  spreadsheet.py
dokabun/llm/: __init__.py  openrouter_client.py  prompt.py  schema.py
dokabun/preprocess/: __init__.py  base.py  image.py  text.py
dokabun/utils/: __init__.py  datetime.py
examples/: sample.csv
extras/: excel-file-link-auto-macro.ahk
extras/dokabun_extras/: __init__.py  viz_embeddings.py
tests/: test_config.py  test_openrouter_client.py  test_preprocess.py  test_runner.py  test_schema.py  test_spreadsheet.py  test_summary.py  test_viz_embeddings.py
